[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Scenery/stars.jpg" type="Texture" id=2]
[ext_resource path="res://Planets.gd" type="Script" id=3]
[ext_resource path="res://Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://AI.tscn" type="PackedScene" id=5]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
self_modulate = Color( 0.25098, 0.25098, 0.25098, 1 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 8912, 6420 )

[node name="Planets" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Cursor" parent="." instance=ExtResource( 4 )]

[node name="Bullets" type="Node2D" parent="."]

[node name="Fleets" type="Node2D" parent="."]

[node name="AI" parent="." instance=ExtResource( 5 )]

[node name="LoseCheckTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="LoseCheckTimer" to="." method="_on_LoseCheckTimer_timeout"]
